# MLOps_course_2026

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  cloudbuild.yaml  config.yaml  data.dvc  index.html  main.py  objects.inv  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: cml_data.yaml  deploy_docs.yaml  docker.yaml  linting.yaml  pre_commit.yaml  stage_model.yaml  tests.yaml
api/: index.html
app/: main.py  onnx_fastapi.py  vit_app.py  vit_test.py
bentoml_app/: bentofile.yaml  bentoml_client.py  bentoml_service.py  bentoml_service_adaptive_batching.py  bentoml_service_composition.py
cloud_run/: simple_fastapi_app_volume.py  sklearn_cloud_functions.py
configs/: cloudbuild.yaml  defaults.yaml
configs/dataset/: corupt_mnist.yaml  mnist.yaml
configs/model/: baseline_model.yaml  vae.yaml
configs/optimizer/: adam.yaml
configs/sweep/: sweep.yaml
configs/training/: default.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  inference_onnx.dockerfile  simple_fastapi_app.dockerfile  simple_fastapi_app_volume.dockerfile  streamlit_app.dockerfile  train.dockerfile  vit_app.dockerfile  wandb.docker
docs/: mkdocs.yaml
docs/source/: api.md  index.md
models/: model.pth
onnx/: check_onnx_model.py  onnx_benchmark.py  optimize_onnx.py  pytorch2onnx.py  pytorchligtning2onnx.py  run_onnx_model.py
onnx_ex/: check_onnx_model.py  onnx_benchmark.py  optimize_onnx.py  pytorch2onnx.py  pytorchligtning2onnx.py  run_onnx_model.py
samples/: backend.dockerfile  backend.py  frontend.dockerfile  frontend.py  requirements_backend.txt  requirements_frontend.txt
search/: search_index.json
src/mlops_course/: auto_register_best_model.py  callbacks.py  data.py  dataset.py  dataset_statistics.py  evaluate.py  iris_classifier.py  link_model.py  model.py  my_logger.py  pytorch_profiler_example.py  show_profiling.py  train.py  vae_mnist.py  visualize.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_apis.py
tests/performancetests/: test_model.py
