[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops_course"
version = "0.0.1"
description = "Coursework for the DTU MLOps course"
authors = [
  { name = "Mikkel N. Rasmussen", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "dvc-ssh>=4.2.2",
    "fastapi==0.115.6",
    "gdown>=5.2.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "pygit2>=1.19.1",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "typer>=0.15.4",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "mlops_course.train:train"
evaluate = "mlops_course.evaluate:evaluate"
greetings = "mlops_course.iris_classifier:app"
train_vae = "mlops_course.vae_mnist:train"
reproducibility_tester = "mlops_course.reproducibility_tester:main"