[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops_course"
version = "0.0.1"
description = "Coursework for the DTU MLOps course"
authors = [
  { name = "Mikkel N. Rasmussen", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "dvc-ssh>=4.2.2",
    "fastapi==0.128.0",
    "gdown>=5.2.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pygit2>=1.19.1",
    "scikit-learn>=1.8.0",
    "snakeviz>=2.2.2",
    "tensorboard>=2.20.0",
    "torch==2.6.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.21.0",
    "typer>=0.15.4",
    "uvicorn==0.34.0",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "ruff==0.14.11",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.coverage.run]
source = ["mlops_course"]
omit = [
  "tests/*",
  "*/.venv/*",
  "*/site-packages/*",
  "/tmp/*",
  "/private/var/folders/*",
  "*/_remote_module_non_scriptable.py",
]

[project.scripts]
train = "mlops_course.train:train"
evaluate = "mlops_course.evaluate:evaluate"
greetings = "mlops_course.iris_classifier:app"
train_vae = "mlops_course.vae_mnist:train"
reproducibility_tester = "mlops_course.reproducibility_tester:main"
data_stats = "mlops_course.dataset_statistics:main"
